--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@
   margin-top: 5vw;
 }
 
-.calculator .screen {
+.calculator .input {
   border: 2px solid lightgray;
   width: 100%;
   height: 8vh;
@@ -23,7 +23,7 @@
   text-align: right;
 }
 
-.calculator .screen::-webkit-scrollbar {
+.calculator .input::-webkit-scrollbar {
   display: none;
 }
 
@@ -79,7 +79,7 @@
     width: 40%;
   }
 
-  .calculator .screen {
+  .calculator .input {
     height: 14vh;
   }
 
@@ -98,7 +98,7 @@
     font-size: 2.5rem;
   }
 
-  .calculator .screen {
+  .calculator .input {
     height: 18vh;
     font-size: 2.5rem;
     padding: 2rem;
@@ -115,7 +115,7 @@
     padding: 1rem 1rem 0 1rem;
   }
 
-  .calculator .screen {
+  .calculator .input {
     height: 6vh;
     font-size: 1rem;
   }
